--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
     	<!-- Sky -->
 
 		<!-- Forest -->
-		<a-entity
+		<<!-- a-entity
 			gltf-model="#forest"
 			position="0 -0.5 0"
 			scale="1.5 1.5 1.5"
-		></a-entity>
+		></a-entity> -->
 
 		<!-- Xbot -->
 		<a-entity
