--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       		<a-asset-item id="forest" src="forest/scene.gltf"></a-asset-item>
       		
       		<!-- Sky Asset -->
-      		<!-- <img id="" src=""> -->
+      		<img id="space" src="space.jpg">
     	</a-assets>
 
     	<!-- Camera -->
@@ -51,6 +51,7 @@
     	</a-camera>
 
     	<!-- Sky -->
+    	<a-sky src="#space"></a-sky>
 
 		<!-- Forest -->
 		<<!-- a-entity
@@ -61,9 +62,10 @@
 
 		<!-- Xbot -->
 		<a-entity
+			id="bot"
 			gltf-model="#model"
 			position="0 0 -3"
-			animation-mixer="clip: Idle"
+			animation-mixer="clip: Dance"
 		></a-entity>
 
 		<!-- Left Button -->
